[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tentacle-multiaddr = "=0.3.0"
tentacle-secio = "=0.5.0"
#trampoline-sdk = {git = "https://github.com/WilfredTA/trampoline", branch = "feat/nft-sdk"}
trampoline-sdk = {git = "https://github.com/WilfredTA/trampoline", branch = "feat/nft-sdk"}
ckb-hash = "0.101.2"
ckb-always-success-script = "0.0.1"
ckb-jsonrpc-types = "0.101.2"
